--- a/loginwidget.ui
+++ b/loginwidget.ui
@@ -22,7 +22,7 @@
      <property name="rightMargin">
       <number>7</number>
      </property>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -35,21 +35,21 @@
        </property>
       </spacer>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLineEdit" name="usernameBox">
        <property name="placeholderText">
         <string>Username</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="3" column="0">
       <widget class="QLineEdit" name="passwordBox">
        <property name="placeholderText">
         <string>Email</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="4" column="0">
       <widget class="QPushButton" name="checkLoginButton">
        <property name="text">
         <string>Login</string>
@@ -68,6 +68,22 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Login with your Social Network account</string>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::RichText</enum>
+       </property>
+       <property name="scaledContents">
+        <bool>false</bool>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
