--- a/loginwidget.ui
+++ b/loginwidget.ui
@@ -22,7 +22,7 @@
      <property name="rightMargin">
       <number>7</number>
      </property>
-     <item row="5" column="0">
+     <item row="7" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -42,17 +42,17 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLineEdit" name="passwordBox">
-       <property name="placeholderText">
-        <string>Email</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="0">
       <widget class="QPushButton" name="checkLoginButton">
        <property name="text">
         <string>Login</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLineEdit" name="passwordBox">
+       <property name="placeholderText">
+        <string>Email</string>
        </property>
       </widget>
      </item>
@@ -84,6 +84,32 @@
         <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QProgressBar" name="loginProgressBar">
+       <property name="maximum">
+        <number>10000</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <spacer name="verticalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
