--- a/resedit.qrc
+++ b/resedit.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>GO3-Traks_logo.jpg</file>
+        <file alias="TreksLogo">res/TreksLogo.png</file>
     </qresource>
 </RCC>
