--- a/uploadwidget.ui
+++ b/uploadwidget.ui
@@ -45,6 +45,9 @@
        <height>0</height>
       </size>
      </property>
+     <property name="textVisible">
+      <bool>false</bool>
+     </property>
      <property name="textDirection">
       <enum>QProgressBar::BottomToTop</enum>
      </property>
@@ -80,6 +83,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="viewPostButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>100</width>
@@ -106,6 +112,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="uploadAnotherButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
          <horstretch>0</horstretch>
