--- a/resedit.qrc
+++ b/resedit.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file alias="TreksLogo">res/TreksLogo.png</file>
         <file>res/kml_template.kml</file>
+        <file>res/forward_button.png</file>
     </qresource>
 </RCC>
